# fraud-risk-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: schema.yaml  train.yaml
scripts/: ci_eval.py  promote_model.py
src/fraud/: data_loader.py  features.py  train.py
tests/: test_data_loader.py  test_features.py  test_sanity.py  test_training_smoke.py
tests/data/: good.csv  missing_col.csv  wrong_dtype.csv
